# strawberry-manager

./: README.md  meson.build  meson_options.txt
.github/workflows/: build.yaml
data/: strawberry-manager.service.in  theme.css
include/: skm-service.h  skm-sysfs.h  skm-ui.h
src/: main.c  remote-util.c  remote.c  service-fan.c  service-gpu.c  service-led.c  service-system.c  service.c  settings.c  skm-remote-util.h  skm-remote.h  skm-service-private.h  skm-settings.h  skm-ui-private.h  sysfs.c  ui-actions.c  ui-common.c  ui-settings.c  ui-update.c  ui.c
tests/: test_remote_util.c
udev/: 99-strawberry-km.rules
